--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vonage/server-sdk": "^3.16.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.14",
     "twilio": "^5.2.2"
